Add CatBoost model notebook, outputs scaffolding, and documentation updates

--- a/notebooks/catBoostDasymetric.ipynb
+++ b/notebooks/catBoostDasymetric.ipynb
@@ -1,12 +1,249 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "4a0622cf",
+   "metadata": {},
+   "source": [
+    "# CatBoost Dasymetric Poverty Mapping Notebook\n",
+    "\n",
+    "## Checklist\n",
+    "- Load and validate input feature and target datasets\n",
+    "- Prepare training matrix (fractional assignment already baked into engineered dataset)\n",
+    "- Train CatBoost with cross-validation and capture metrics\n",
+    "- Generate predictions and evaluation plots\n",
+    "- Save all tabular outputs (CSV) and visualizations (PNG)\n",
+    "- Copy Random Forest outputs and create comparison manifest\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "fa3d2e17-65cc-4176-a845-5a4b8c9e24bc",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc041969",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from pathlib import Path\n",
+    "from catboost import CatBoostRegressor, Pool\n",
+    "from sklearn.model_selection import KFold\n",
+    "from sklearn.metrics import r2_score, mean_absolute_error, mean_squared_error\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# Directories\n",
+    "BASE_DIR = Path('.')\n",
+    "OUTPUT_ROOT = BASE_DIR / 'output' / 'catBoost'\n",
+    "DATA_OUT = OUTPUT_ROOT / 'data'\n",
+    "VIS_OUT = OUTPUT_ROOT / 'visualizations'\n",
+    "RF_OUT = OUTPUT_ROOT / 'randomForest_outputs'\n",
+    "for d in [DATA_OUT, VIS_OUT, RF_OUT]:\n",
+    "    d.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "# Helper: fail fast with clear message\n",
+    "def abort(msg: str):\n",
+    "    print(f\"ERROR: {msg}\")\n",
+    "    raise SystemExit(1)\n",
+    "\n",
+    "# Locate engineered dataset (adapt if actual filename differs)\n",
+    "# Assumption: a comprehensive grid-level feature dataset exists similar to RandomForest workflow.\n",
+    "ENGINEERED_PATHS = [\n",
+    "    BASE_DIR / 'assets' / 'grid_with_comprehensive_data.csv',\n",
+    "    BASE_DIR / 'assets' / 'grid_features_engineered.csv'\n",
+    "]\n",
+    "engineered_file = None\n",
+    "for p in ENGINEERED_PATHS:\n",
+    "    if p.exists():\n",
+    "        engineered_file = p\n",
+    "        break\n",
+    "if engineered_file is None:\n",
+    "    abort('No engineered dataset found. Expected one of: ' + ', '.join(str(p) for p in ENGINEERED_PATHS))\n",
+    "print(f\"Using engineered dataset: {engineered_file}\")\n",
+    "\n",
+    "# Load dataset\n",
+    "try:\n",
+    "    df = pd.read_csv(engineered_file)\n",
+    "except Exception as e:\n",
+    "    abort(f'Failed to read engineered dataset: {e}')\n",
+    "\n",
+    "# Basic validation: check required target column (assumption: poverty_rate or similar)\n",
+    "TARGET_CANDIDATES = ['poverty_rate', 'poverty_index', 'poverty_magnitude']\n",
+    "TARGET = None\n",
+    "for col in TARGET_CANDIDATES:\n",
+    "    if col in df.columns:\n",
+    "        TARGET = col\n",
+    "        break\n",
+    "if TARGET is None:\n",
+    "    abort('No target column found. Looked for: ' + ', '.join(TARGET_CANDIDATES))\n",
+    "print(f\"Target column: {TARGET}\")\n",
+    "\n",
+    "# Drop obvious non-feature columns (IDs, geometry) if present\n",
+    "NON_FEATURE_COLS = [TARGET] + [c for c in ['geometry', 'barangay_name', 'grid_id'] if c in df.columns]\n",
+    "feature_cols = [c for c in df.columns if c not in NON_FEATURE_COLS]\n",
+    "X = df[feature_cols].copy()\n",
+    "y = df[TARGET].copy()\n",
+    "\n",
+    "# Handle NaNs (simple strategy: fill with column mean; CatBoost can handle missing but for metrics consistency fill)\n",
+    "X = X.apply(lambda s: s.fillna(s.mean()))\n",
+    "\n",
+    "# Determine categorical features (heuristic: object or low unique count)\n",
+    "cat_features = [i for i, c in enumerate(feature_cols) if (df[c].dtype == 'object' or df[c].nunique() < 15)]\n",
+    "print(f\"Categorical feature count: {len(cat_features)}\")\n",
+    "\n",
+    "# Cross-validation\n",
+    "kfold = KFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "cv_rows = []\n",
+    "fold = 1\n",
+    "feature_importance_accum = np.zeros(len(feature_cols))\n",
+    "for train_idx, test_idx in kfold.split(X):\n",
+    "    X_train, X_test = X.iloc[train_idx], X.iloc[test_idx]\n",
+    "    y_train, y_test = y.iloc[train_idx], y.iloc[test_idx]\n",
+    "\n",
+    "    train_pool = Pool(X_train, y_train, cat_features=cat_features)\n",
+    "    test_pool = Pool(X_test, y_test, cat_features=cat_features)\n",
+    "\n",
+    "    model = CatBoostRegressor(\n",
+    "        iterations=500,\n",
+    "        depth=8,\n",
+    "        learning_rate=0.05,\n",
+    "        loss_function='RMSE',\n",
+    "        eval_metric='RMSE',\n",
+    "        verbose=False,\n",
+    "        random_state=42\n",
+    "    )\n",
+    "    model.fit(train_pool, eval_set=test_pool)\n",
+    "\n",
+    "    preds = model.predict(test_pool)\n",
+    "    r2 = r2_score(y_test, preds)\n",
+    "    mae = mean_absolute_error(y_test, preds)\n",
+    "    rmse = mean_squared_error(y_test, preds, squared=False)\n",
+    "\n",
+    "    cv_rows.append({'fold': fold, 'r2': r2, 'mae': mae, 'rmse': rmse})\n",
+    "    feature_importance_accum += model.get_feature_importance(train_pool)\n",
+    "    print(f\"Fold {fold}: R2={r2:.4f} MAE={mae:.4f} RMSE={rmse:.4f}\")\n",
+    "    fold += 1\n",
+    "\n",
+    "cv_df = pd.DataFrame(cv_rows)\n",
+    "cv_df.to_csv(DATA_OUT / 'catboost_cv_metrics.csv', index=False)\n",
+    "print(\"Saved CV metrics.\")\n",
+    "\n",
+    "# Train final model on full data\n",
+    "full_pool = Pool(X, y, cat_features=cat_features)\n",
+    "final_model = CatBoostRegressor(\n",
+    "    iterations=800,\n",
+    "    depth=8,\n",
+    "    learning_rate=0.03,\n",
+    "    loss_function='RMSE',\n",
+    "    eval_metric='RMSE',\n",
+    "    verbose=False,\n",
+    "    random_state=42\n",
+    ")\n",
+    "final_model.fit(full_pool)\n",
+    "\n",
+    "# Feature importance (average over folds + full model)\n",
+    "avg_importance = feature_importance_accum / kfold.get_n_splits()\n",
+    "importance_df = pd.DataFrame({'feature': feature_cols, 'cv_importance': avg_importance})\n",
+    "full_importance = final_model.get_feature_importance(full_pool)\n",
+    "importance_df['full_importance'] = full_importance\n",
+    "importance_df.sort_values('full_importance', ascending=False, inplace=True)\n",
+    "importance_df.to_csv(DATA_OUT / 'catboost_feature_importance.csv', index=False)\n",
+    "print(\"Saved feature importance.\")\n",
+    "\n",
+    "# Predictions on full data (in-sample for exploratory comparison)\n",
+    "full_preds = final_model.predict(full_pool)\n",
+    "pred_df = pd.DataFrame({'prediction': full_preds, 'actual': y})\n",
+    "pred_df.to_csv(DATA_OUT / 'catboost_full_predictions.csv', index=False)\n",
+    "print(\"Saved full predictions.\")\n",
+    "\n",
+    "# Visualization helpers\n",
+    "sns.set(style='whitegrid')\n",
+    "\n",
+    "# Feature importance plot\n",
+    "plt.figure(figsize=(8,6))\n",
+    "imp_top = importance_df.head(20)\n",
+    "plt.barh(imp_top['feature'][::-1], imp_top['full_importance'][::-1], color='steelblue')\n",
+    "plt.title('CatBoost Feature Importance (Top 20)')\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(VIS_OUT / 'catboost_feature_importance.png', dpi=150)\n",
+    "plt.close()\n",
+    "print(\"Saved feature importance plot.\")\n",
+    "\n",
+    "# Predicted vs Actual\n",
+    "plt.figure(figsize=(6,6))\n",
+    "plt.scatter(pred_df['actual'], pred_df['prediction'], alpha=0.5)\n",
+    "plt.xlabel('Actual')\n",
+    "plt.ylabel('Predicted')\n",
+    "plt.title('CatBoost Predicted vs Actual')\n",
+    "lims = [pred_df[['actual','prediction']].min().min(), pred_df[['actual','prediction']].max().max()]\n",
+    "plt.plot(lims, lims, 'r--')\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(VIS_OUT / 'catboost_pred_vs_actual.png', dpi=150)\n",
+    "plt.close()\n",
+    "print(\"Saved predicted vs actual plot.\")\n",
+    "\n",
+    "# Residual distribution\n",
+    "residuals = pred_df['actual'] - pred_df['prediction']\n",
+    "plt.figure(figsize=(8,4))\n",
+    "sns.histplot(residuals, bins=30, kde=True, color='purple')\n",
+    "plt.title('CatBoost Residual Distribution')\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(VIS_OUT / 'catboost_residuals.png', dpi=150)\n",
+    "plt.close()\n",
+    "print(\"Saved residual distribution plot.\")\n",
+    "\n",
+    "# Copy Random Forest outputs (heuristic: look for prior output directory or known files)\n",
+    "rf_source_dirs = [BASE_DIR / 'output' / 'randomForest', BASE_DIR / 'output' / 'rf', BASE_DIR / 'output' / 'random_forest']\n",
+    "rf_copied = []\n",
+    "for rf_dir in rf_source_dirs:\n",
+    "    if rf_dir.exists():\n",
+    "        for root, dirs, files in os.walk(rf_dir):\n",
+    "            rel_root = Path(root).relative_to(rf_dir)\n",
+    "            for f in files:\n",
+    "                src = Path(root) / f\n",
+    "                dest = RF_OUT / rel_root\n",
+    "                dest.mkdir(parents=True, exist_ok=True)\n",
+    "                try:\n",
+    "                    import shutil\n",
+    "                    shutil.copy2(src, dest / f)\n",
+    "                    rf_copied.append(str(dest / f))\n",
+    "                except Exception as e:\n",
+    "                    print(f\"WARN: Failed to copy {src}: {e}\")\n",
+    "\n",
+    "# Manifest of RF outputs\n",
+    "manifest_path = RF_OUT / 'randomForest_output_list.md'\n",
+    "with open(manifest_path, 'w', encoding='utf-8') as mh:\n",
+    "    mh.write('# Random Forest Output Files (Copied)\\n\\n')\n",
+    "    if rf_copied:\n",
+    "        for fp in rf_copied:\n",
+    "            mh.write(f'- {fp} \\n')\n",
+    "    else:\n",
+    "        mh.write('No Random Forest output directory found; nothing copied.\\n')\n",
+    "print(\"Random Forest outputs manifest written.\")\n",
+    "\n",
+    "# Save run metadata\n",
+    "run_meta = {\n",
+    "    'engineered_file': str(engineered_file),\n",
+    "    'target': TARGET,\n",
+    "    'n_rows': int(df.shape[0]),\n",
+    "    'n_features': int(len(feature_cols)),\n",
+    "    'categorical_features_detected': int(len(cat_features))\n",
+    "}\n",
+    "pd.DataFrame([run_meta]).to_csv(DATA_OUT / 'catboost_run_metadata.csv', index=False)\n",
+    "print('Saved run metadata.')\n",
+    "\n",
+    "print('CatBoost workflow complete.')"
+   ]
   }
  ],
  "metadata": {
