Add model comparison notebook and organize RF/CatBoost outputs

--- a/notebooks/catBoostDasymetric.ipynb
+++ b/notebooks/catBoostDasymetric.ipynb
@@ -28,9 +28,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "cc041969",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -57,21 +55,59 @@
       "  Target range: [0.190, 0.798]\n",
       "  Target mean: 0.498\n",
       "\n",
-      "=== CROSS-VALIDATION (5-FOLD) ===\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "got an unexpected keyword argument 'squared'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 128\u001b[39m\n\u001b[32m    126\u001b[39m r2 = r2_score(y_test, preds)\n\u001b[32m    127\u001b[39m mae = mean_absolute_error(y_test, preds)\n\u001b[32m--> \u001b[39m\u001b[32m128\u001b[39m rmse = \u001b[43mmean_squared_error\u001b[49m\u001b[43m(\u001b[49m\u001b[43my_test\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpreds\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msquared\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[32m    130\u001b[39m cv_rows.append({\u001b[33m'\u001b[39m\u001b[33mfold\u001b[39m\u001b[33m'\u001b[39m: fold_num, \u001b[33m'\u001b[39m\u001b[33mr2\u001b[39m\u001b[33m'\u001b[39m: r2, \u001b[33m'\u001b[39m\u001b[33mmae\u001b[39m\u001b[33m'\u001b[39m: mae, \u001b[33m'\u001b[39m\u001b[33mrmse\u001b[39m\u001b[33m'\u001b[39m: rmse})\n\u001b[32m    131\u001b[39m feature_importance_accum += model.get_feature_importance(train_pool)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~\\miniconda3\\envs\\povertymapping\\Lib\\site-packages\\sklearn\\utils\\_param_validation.py:196\u001b[39m, in \u001b[36mvalidate_params.<locals>.decorator.<locals>.wrapper\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m    193\u001b[39m func_sig = signature(func)\n\u001b[32m    195\u001b[39m \u001b[38;5;66;03m# Map *args/**kwargs to the function signature\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m196\u001b[39m params = \u001b[43mfunc_sig\u001b[49m\u001b[43m.\u001b[49m\u001b[43mbind\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    197\u001b[39m params.apply_defaults()\n\u001b[32m    199\u001b[39m \u001b[38;5;66;03m# ignore self/cls and positional/keyword markers\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~\\miniconda3\\envs\\povertymapping\\Lib\\inspect.py:3195\u001b[39m, in \u001b[36mSignature.bind\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m   3190\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mbind\u001b[39m(\u001b[38;5;28mself\u001b[39m, /, *args, **kwargs):\n\u001b[32m   3191\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Get a BoundArguments object, that maps the passed `args`\u001b[39;00m\n\u001b[32m   3192\u001b[39m \u001b[33;03m    and `kwargs` to the function's signature.  Raises `TypeError`\u001b[39;00m\n\u001b[32m   3193\u001b[39m \u001b[33;03m    if the passed arguments can not be bound.\u001b[39;00m\n\u001b[32m   3194\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m3195\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_bind\u001b[49m\u001b[43m(\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~\\miniconda3\\envs\\povertymapping\\Lib\\inspect.py:3184\u001b[39m, in \u001b[36mSignature._bind\u001b[39m\u001b[34m(self, args, kwargs, partial)\u001b[39m\n\u001b[32m   3182\u001b[39m         arguments[kwargs_param.name] = kwargs\n\u001b[32m   3183\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m3184\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\n\u001b[32m   3185\u001b[39m             \u001b[33m'\u001b[39m\u001b[33mgot an unexpected keyword argument \u001b[39m\u001b[38;5;132;01m{arg!r}\u001b[39;00m\u001b[33m'\u001b[39m.format(\n\u001b[32m   3186\u001b[39m                 arg=\u001b[38;5;28mnext\u001b[39m(\u001b[38;5;28miter\u001b[39m(kwargs))))\n\u001b[32m   3188\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._bound_arguments_cls(\u001b[38;5;28mself\u001b[39m, arguments)\n",
-      "\u001b[31mTypeError\u001b[39m: got an unexpected keyword argument 'squared'"
+      "=== CROSS-VALIDATION (5-FOLD) ===\n",
+      "Fold 1: R²=0.9853, MAE=0.0051, RMSE=0.0120\n",
+      "Fold 2: R²=0.9871, MAE=0.0049, RMSE=0.0108\n",
+      "Fold 3: R²=0.9748, MAE=0.0065, RMSE=0.0169\n",
+      "Fold 4: R²=0.9912, MAE=0.0042, RMSE=0.0093\n",
+      "Fold 5: R²=0.9862, MAE=0.0048, RMSE=0.0119\n",
+      "\n",
+      "CV Summary:\n",
+      "  Mean R²: 0.9849\n",
+      "  Mean MAE: 0.0051\n",
+      "  Mean RMSE: 0.0122\n",
+      "✓ Saved CV metrics to ..\\output\\catBoost\\data\\catboost_cv_metrics.csv\n",
+      "\n",
+      "=== TRAINING FINAL MODEL ===\n",
+      "✓ Final model trained\n",
+      "✓ Saved feature importance to ..\\output\\catBoost\\data\\catboost_feature_importance.csv\n",
+      "\n",
+      "Top 10 most important features:\n",
+      "  no_education_pct: 22.2\n",
+      "  service_workers_pct: 11.3\n",
+      "  strong_roof_pct: 4.5\n",
+      "  highschool_pct: 4.3\n",
+      "  self_employed_count: 4.2\n",
+      "  elementary_pct: 3.8\n",
+      "  seasonal_employment_pct: 3.7\n",
+      "  college_pct: 3.7\n",
+      "  farm_workers_pct: 3.5\n",
+      "  unskilled_workers_pct: 3.4\n",
+      "✓ Saved predictions to ..\\output\\catBoost\\data\\catboost_predictions.csv\n",
+      "\n",
+      "=== PREDICTING ON FULL GRID ===\n",
+      "✓ Predicted poverty for 1724 grid cells\n",
+      "✓ Saved to ..\\output\\catBoost\\data\\catboost_full_grid_predictions.csv\n",
+      "\n",
+      "=== GENERATING VISUALIZATIONS ===\n",
+      "✓ Saved ..\\output\\catBoost\\visualizations\\catboost_feature_importance.png\n",
+      "✓ Saved ..\\output\\catBoost\\visualizations\\catboost_pred_vs_actual.png\n",
+      "✓ Saved ..\\output\\catBoost\\visualizations\\catboost_residuals.png\n",
+      "✓ Saved ..\\output\\catBoost\\visualizations\\catboost_cv_metrics.png\n",
+      "\n",
+      "=== COPYING RANDOM FOREST OUTPUTS ===\n",
+      "✓ Saved manifest to ..\\output\\catBoost\\randomForest_outputs\\randomForest_output_list.md\n",
+      "⚠ No RF outputs found (run RandomForest notebook first)\n",
+      "✓ Saved run metadata to ..\\output\\catBoost\\data\\catboost_run_metadata.csv\n",
+      "\n",
+      "============================================================\n",
+      "✓ CATBOOST WORKFLOW COMPLETE\n",
+      "============================================================\n",
+      "\n",
+      "Outputs saved to:\n",
+      "  Data: ..\\output\\catBoost\\data\n",
+      "  Visualizations: ..\\output\\catBoost\\visualizations\n",
+      "  RF Comparison: ..\\output\\catBoost\\randomForest_outputs\n"
      ]
     }
    ],
@@ -203,7 +239,7 @@
     "    preds = model.predict(test_pool)\n",
     "    r2 = r2_score(y_test, preds)\n",
     "    mae = mean_absolute_error(y_test, preds)\n",
-    "    rmse = mean_squared_error(y_test, preds, squared=False)\n",
+    "    rmse = np.sqrt(mean_squared_error(y_test, preds))\n",
     "\n",
     "    cv_rows.append({'fold': fold_num, 'r2': r2, 'mae': mae, 'rmse': rmse})\n",
     "    feature_importance_accum += model.get_feature_importance(train_pool)\n",
@@ -411,6 +447,208 @@
     "print(f\"  Visualizations: {VIS_OUT}\")\n",
     "print(f\"  RF Comparison: {RF_OUT}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b96cc43d-c4eb-491d-ad0f-144a0c46077d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== CREATING MAPS ===\n",
+      "Loading grid geometry from ..\\assets\\grid_with_comprehensive_data.geojson\n",
+      "✓ Saved ..\\output\\catBoost\\visualizations\\catboost_poverty_map_predicted.png\n",
+      "✓ Saved ..\\output\\catBoost\\visualizations\\catboost_poverty_map_comparison.png\n",
+      "✓ Saved ..\\output\\catBoost\\visualizations\\catboost_residual_map.png\n",
+      "\n",
+      "✓ Mapping complete! Maps saved to ..\\output\\catBoost\\visualizations\n"
+     ]
+    }
+   ],
+   "source": [
+    "# === MAPPING OUTPUTS ===\n",
+    "print(\"\\n=== CREATING MAPS ===\")\n",
+    "\n",
+    "import geopandas as gpd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.colors import LinearSegmentedColormap\n",
+    "import contextily as ctx\n",
+    "\n",
+    "# Load the full grid predictions with geometry\n",
+    "grid_geojson_path = Path('../assets/grid_with_comprehensive_data.geojson')\n",
+    "if not grid_geojson_path.exists():\n",
+    "    # Try alternative paths\n",
+    "    alt_paths = [\n",
+    "        Path('../assets/grid_cells.geojson'),\n",
+    "        Path('../assets/grid_with_poverty_predictions.geojson'),\n",
+    "    ]\n",
+    "    for p in alt_paths:\n",
+    "        if p.exists():\n",
+    "            grid_geojson_path = p\n",
+    "            break\n",
+    "\n",
+    "if grid_geojson_path.exists():\n",
+    "    print(f\"Loading grid geometry from {grid_geojson_path}\")\n",
+    "    gdf = gpd.read_file(grid_geojson_path)\n",
+    "    \n",
+    "    # Merge with predictions\n",
+    "    if 'grid_id' in full_pred_df.columns and 'grid_id' in gdf.columns:\n",
+    "        gdf_pred = gdf.merge(full_pred_df, on='grid_id', how='left')\n",
+    "    else:\n",
+    "        # If no grid_id, merge by index\n",
+    "        gdf_pred = gdf.copy()\n",
+    "        gdf_pred['poverty_rate_predicted'] = full_pred_df['poverty_rate_predicted'].values\n",
+    "        if 'poverty_rate_actual' in full_pred_df.columns:\n",
+    "            gdf_pred['poverty_rate_actual'] = full_pred_df['poverty_rate_actual'].values\n",
+    "    \n",
+    "    # Ensure CRS is set\n",
+    "    if gdf_pred.crs is None:\n",
+    "        gdf_pred = gdf_pred.set_crs('EPSG:4326')\n",
+    "    \n",
+    "    # Convert to Web Mercator for better visualization\n",
+    "    gdf_pred_web = gdf_pred.to_crs('EPSG:3857')\n",
+    "    \n",
+    "    # Create custom colormap (white to red)\n",
+    "    colors = ['#f7fbff', '#deebf7', '#c6dbef', '#9ecae1', '#6baed6', \n",
+    "              '#4292c6', '#2171b5', '#08519c', '#08306b']\n",
+    "    n_bins = 100\n",
+    "    cmap = LinearSegmentedColormap.from_list('poverty', colors, N=n_bins)\n",
+    "    \n",
+    "    # Map 1: Predicted Poverty Rates\n",
+    "    fig, ax = plt.subplots(figsize=(12, 10))\n",
+    "    gdf_pred_web.plot(column='poverty_rate_predicted', \n",
+    "                      cmap=cmap, \n",
+    "                      legend=True,\n",
+    "                      ax=ax,\n",
+    "                      edgecolor='none',\n",
+    "                      alpha=0.8,\n",
+    "                      legend_kwds={'label': 'Predicted Poverty Rate',\n",
+    "                                   'orientation': 'horizontal',\n",
+    "                                   'shrink': 0.8})\n",
+    "    \n",
+    "    # Add basemap\n",
+    "    try:\n",
+    "        ctx.add_basemap(ax, source=ctx.providers.CartoDB.Positron, alpha=0.5)\n",
+    "    except:\n",
+    "        print(\"  ⚠ Could not add basemap (requires internet connection)\")\n",
+    "    \n",
+    "    ax.set_title('CatBoost Predicted Poverty Rates\\nZamboanga City 1km² Grid', \n",
+    "                 fontsize=14, fontweight='bold', pad=20)\n",
+    "    ax.axis('off')\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(VIS_OUT / 'catboost_poverty_map_predicted.png', dpi=300, bbox_inches='tight')\n",
+    "    print(f\"✓ Saved {VIS_OUT / 'catboost_poverty_map_predicted.png'}\")\n",
+    "    plt.close()\n",
+    "    \n",
+    "    # Map 2: Actual vs Predicted (if actual data available)\n",
+    "    if 'poverty_rate_actual' in gdf_pred_web.columns:\n",
+    "        # Filter to cells with actual data\n",
+    "        gdf_with_actual = gdf_pred_web[gdf_pred_web['poverty_rate_actual'].notna()].copy()\n",
+    "        \n",
+    "        if len(gdf_with_actual) > 0:\n",
+    "            fig, axes = plt.subplots(1, 2, figsize=(18, 8))\n",
+    "            \n",
+    "            # Actual poverty\n",
+    "            gdf_with_actual.plot(column='poverty_rate_actual',\n",
+    "                                cmap=cmap,\n",
+    "                                legend=True,\n",
+    "                                ax=axes[0],\n",
+    "                                edgecolor='none',\n",
+    "                                alpha=0.8,\n",
+    "                                legend_kwds={'label': 'Actual Poverty Rate',\n",
+    "                                           'shrink': 0.8})\n",
+    "            axes[0].set_title('Actual Poverty Rates\\n(Training Data)', fontsize=12, fontweight='bold')\n",
+    "            axes[0].axis('off')\n",
+    "            \n",
+    "            # Predicted poverty (same cells)\n",
+    "            gdf_with_actual.plot(column='poverty_rate_predicted',\n",
+    "                                cmap=cmap,\n",
+    "                                legend=True,\n",
+    "                                ax=axes[1],\n",
+    "                                edgecolor='none',\n",
+    "                                alpha=0.8,\n",
+    "                                legend_kwds={'label': 'Predicted Poverty Rate',\n",
+    "                                           'shrink': 0.8})\n",
+    "            axes[1].set_title('CatBoost Predicted Poverty Rates\\n(Same Cells)', fontsize=12, fontweight='bold')\n",
+    "            axes[1].axis('off')\n",
+    "            \n",
+    "            # Add basemaps\n",
+    "            try:\n",
+    "                for ax in axes:\n",
+    "                    ctx.add_basemap(ax, source=ctx.providers.CartoDB.Positron, alpha=0.5)\n",
+    "            except:\n",
+    "                pass\n",
+    "            \n",
+    "            plt.suptitle('Actual vs CatBoost Predicted Poverty Rates', \n",
+    "                        fontsize=14, fontweight='bold', y=0.98)\n",
+    "            plt.tight_layout()\n",
+    "            plt.savefig(VIS_OUT / 'catboost_poverty_map_comparison.png', dpi=300, bbox_inches='tight')\n",
+    "            print(f\"✓ Saved {VIS_OUT / 'catboost_poverty_map_comparison.png'}\")\n",
+    "            plt.close()\n",
+    "    \n",
+    "    # Map 3: Prediction Error (Residuals) for training cells\n",
+    "    if 'poverty_rate_actual' in gdf_pred_web.columns:\n",
+    "        gdf_with_actual = gdf_pred_web[gdf_pred_web['poverty_rate_actual'].notna()].copy()\n",
+    "        \n",
+    "        if len(gdf_with_actual) > 0:\n",
+    "            # Calculate residuals\n",
+    "            gdf_with_actual['residual'] = gdf_with_actual['poverty_rate_actual'] - gdf_with_actual['poverty_rate_predicted']\n",
+    "            \n",
+    "            # Create diverging colormap (blue = underpredicted, red = overpredicted)\n",
+    "            div_cmap = plt.cm.RdBu_r\n",
+    "            \n",
+    "            fig, ax = plt.subplots(figsize=(12, 10))\n",
+    "            \n",
+    "            # Plot with center at 0\n",
+    "            vmax = max(abs(gdf_with_actual['residual'].min()), abs(gdf_with_actual['residual'].max()))\n",
+    "            \n",
+    "            gdf_with_actual.plot(column='residual',\n",
+    "                                cmap=div_cmap,\n",
+    "                                legend=True,\n",
+    "                                ax=ax,\n",
+    "                                edgecolor='none',\n",
+    "                                alpha=0.8,\n",
+    "                                vmin=-vmax,\n",
+    "                                vmax=vmax,\n",
+    "                                legend_kwds={'label': 'Residual (Actual - Predicted)',\n",
+    "                                           'orientation': 'horizontal',\n",
+    "                                           'shrink': 0.8})\n",
+    "            \n",
+    "            # Add basemap\n",
+    "            try:\n",
+    "                ctx.add_basemap(ax, source=ctx.providers.CartoDB.Positron, alpha=0.5)\n",
+    "            except:\n",
+    "                pass\n",
+    "            \n",
+    "            ax.set_title('CatBoost Prediction Residuals\\n(Blue = Underpredicted, Red = Overpredicted)', \n",
+    "                        fontsize=14, fontweight='bold', pad=20)\n",
+    "            ax.axis('off')\n",
+    "            plt.tight_layout()\n",
+    "            plt.savefig(VIS_OUT / 'catboost_residual_map.png', dpi=300, bbox_inches='tight')\n",
+    "            print(f\"✓ Saved {VIS_OUT / 'catboost_residual_map.png'}\")\n",
+    "            plt.close()\n",
+    "    \n",
+    "    print(f\"\\n✓ Mapping complete! Maps saved to {VIS_OUT}\")\n",
+    "    \n",
+    "else:\n",
+    "    print(f\"⚠ Grid GeoJSON file not found. Searched:\")\n",
+    "    print(f\"  - {grid_geojson_path}\")\n",
+    "    print(f\"  Please ensure grid geometry file exists to create maps.\")\n",
+    "    print(f\"\\nYou can still export predictions and create maps in QGIS or other GIS software.\")\n",
+    "    print(f\"Predictions saved to: {DATA_OUT / 'catboost_full_grid_predictions.csv'}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "236806e9-4c3c-454c-9a69-a8d89bfb0642",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
