Refactor code structure for improved readability and maintainability

--- a/notebooks/modelComparison.ipynb
+++ b/notebooks/modelComparison.ipynb
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "1c81f19f",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
     "if training_cells is not None and 'poverty_rate' in training_cells.columns:\n",
     "    print(\"\\n\" + \"=\"*80)\n",
     "    print(\"GRID-LEVEL METRICS COMPARISON (1km² cells)\")\n",
-    "    print(\"=\"*80)\n",
+    "    print(\"=\"*80 + \"\\n\")\n",
     "    \n",
     "    # Calculate metrics\n",
     "    metrics = {\n",
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b521b544",
    "metadata": {},
    "outputs": [
@@ -309,7 +309,7 @@
     "if combined is not None and 'barangay_name' in combined.columns:\n",
     "    print(\"\\n\" + \"=\"*80)\n",
     "    print(\"BARANGAY-LEVEL METRICS COMPARISON (Aggregated from grid)\")\n",
-    "    print(\"=\"*80)\n",
+    "    print(\"=\"*80 + \"\\n\")\n",
     "    \n",
     "    # Use barangay_name_clean if available, otherwise barangay_name\n",
     "    brgy_col = 'barangay_name_clean' if 'barangay_name_clean' in combined.columns else 'barangay_name'\n",
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "88e1e439",
    "metadata": {},
    "outputs": [
@@ -414,7 +414,7 @@
     "if rf_importance is not None and cb_importance is not None:\n",
     "    print(\"\\n\" + \"=\"*80)\n",
     "    print(\"FEATURE IMPORTANCE COMPARISON\")\n",
-    "    print(\"=\"*80)\n",
+    "    print(\"=\"*80 + \"\\n\")\n",
     "    \n",
     "    # Merge feature importances\n",
     "    importance_comp = rf_importance.merge(cb_importance, on='feature', how='outer')\n",
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "494c459b",
    "metadata": {},
    "outputs": [
@@ -483,7 +483,7 @@
    ],
    "source": [
     "if training_cells is not None and 'poverty_rate' in training_cells.columns:\n",
-    "    fig, axes = plt.subplots(2, 3, figsize=(20, 12))\n",
+    "    fig, axes = plt.subplots(2, 3, figsize=(22, 13))\n",
     "    \n",
     "    # ========================================================================\n",
     "    # 1. Predicted vs Actual - Random Forest\n",
@@ -566,9 +566,9 @@
     "    ax6.legend()\n",
     "    ax6.grid(True, alpha=0.3, axis='y')\n",
     "    \n",
-    "    plt.tight_layout()\n",
+    "    plt.tight_layout(pad=2.0)\n",
     "    plt.savefig(OUTPUT / 'visualizations' / 'grid_level_comparison.png', dpi=300, bbox_inches='tight')\n",
-    "    print(f\"\\n✓ Saved grid-level comparison plot to {OUTPUT / 'visualizations' / 'grid_level_comparison.png'}\")\n",
+    "    print(f\"\\n✓ Saved grid-level comparison plot to {OUTPUT / 'visualizations' / 'grid_level_comparison.png'}\\n\")\n",
     "    plt.show()"
    ]
   },
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "805319a6",
    "metadata": {},
    "outputs": [
@@ -607,7 +607,7 @@
    ],
    "source": [
     "if importance_comp is not None:\n",
-    "    fig, axes = plt.subplots(1, 2, figsize=(16, 8))\n",
+    "    fig, axes = plt.subplots(1, 2, figsize=(18, 9))\n",
     "    \n",
     "    # Top 20 features side by side\n",
     "    top_20 = importance_comp.nlargest(20, 'avg_importance').copy()\n",
@@ -644,9 +644,9 @@
     "    ax2.grid(True, alpha=0.3, axis='x')\n",
     "    ax2.invert_yaxis()\n",
     "    \n",
-    "    plt.tight_layout()\n",
+    "    plt.tight_layout(pad=2.0)\n",
     "    plt.savefig(OUTPUT / 'visualizations' / 'feature_importance_comparison.png', dpi=300, bbox_inches='tight')\n",
-    "    print(f\"\\n✓ Saved feature importance plot to {OUTPUT / 'visualizations' / 'feature_importance_comparison.png'}\")\n",
+    "    print(f\"\\n✓ Saved feature importance plot to {OUTPUT / 'visualizations' / 'feature_importance_comparison.png'}\\n\")\n",
     "    plt.show()"
    ]
   },
@@ -660,13 +660,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "37fe4b95",
    "metadata": {},
    "outputs": [],
    "source": [
     "if barangay_agg is not None:\n",
-    "    fig, axes = plt.subplots(1, 3, figsize=(18, 5))\n",
+    "    fig, axes = plt.subplots(1, 3, figsize=(20, 6))\n",
     "    \n",
     "    # ========================================================================\n",
     "    # 1. Random Forest - Barangay Level\n",
@@ -709,9 +709,9 @@
     "    ax3.legend()\n",
     "    ax3.grid(True, alpha=0.3)\n",
     "    \n",
-    "    plt.tight_layout()\n",
+    "    plt.tight_layout(pad=2.0)\n",
     "    plt.savefig(OUTPUT / 'visualizations' / 'barangay_level_comparison.png', dpi=300, bbox_inches='tight')\n",
-    "    print(f\"\\n✓ Saved barangay-level comparison plot to {OUTPUT / 'visualizations' / 'barangay_level_comparison.png'}\")\n",
+    "    print(f\"\\n✓ Saved barangay-level comparison plot to {OUTPUT / 'visualizations' / 'barangay_level_comparison.png'}\\n\")\n",
     "    plt.show()"
    ]
   },
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "b588dca2",
    "metadata": {},
    "outputs": [
@@ -757,9 +757,9 @@
    "source": [
     "print(\"\\n\" + \"=\"*80)\n",
     "print(\"FINAL SUMMARY\")\n",
-    "print(\"=\"*80)\n",
+    "print(\"=\"*80 + \"\\n\")\n",
     "\n",
-    "print(\"\\n📊 Outputs saved to:\") \n",
+    "print(\"📊 Outputs saved to:\") \n",
     "print(f\"  Tables: {OUTPUT / 'tables'}\")\n",
     "print(f\"  Visualizations: {OUTPUT / 'visualizations'}\")\n",
     "\n",
@@ -771,7 +771,7 @@
     "\n",
     "print(\"\\n\" + \"=\"*80)\n",
     "print(\"COMPARISON COMPLETE\")\n",
-    "print(\"=\"*80)"
+    "print(\"=\"*80 + \"\\n\")"
    ]
   },
   {
